[gd_scene load_steps=41 format=3 uid="uid://ds423wa3r5uax"]

[ext_resource type="Script" path="res://scripts/enemies/enemyREDO.gd" id="1_utblw"]
[ext_resource type="Texture2D" uid="uid://bnbwul07t2hcd" path="res://testArt/mask.png" id="2_uoqc2"]
[ext_resource type="Texture2D" uid="uid://dfw1xf1mpne4m" path="res://testArt/using/Slime/Individual Sprites/slime-attack-0.png" id="3_u66km"]
[ext_resource type="PackedScene" uid="uid://cyywra1fues8v" path="res://scenes/ui/hp_back_back.tscn" id="4_6fdp5"]
[ext_resource type="Texture2D" uid="uid://c04ntmc4nadd6" path="res://testArt/using/Slime/Individual Sprites/slime-attack-1.png" id="4_r3ok6"]
[ext_resource type="Texture2D" uid="uid://bpy5e7cnjxoj0" path="res://testArt/using/Slime/Individual Sprites/slime-idle-0.png" id="4_xvn54"]
[ext_resource type="Texture2D" uid="uid://frmbifhplv5o" path="res://testArt/using/Slime/Individual Sprites/slime-idle-1.png" id="5_8vmmh"]
[ext_resource type="Texture2D" uid="uid://dpgdhmke8ohaw" path="res://testArt/using/Slime/Individual Sprites/slime-attack-2.png" id="5_253wm"]
[ext_resource type="Texture2D" uid="uid://dws67b7ritw7" path="res://testArt/using/Slime/Individual Sprites/slime-idle-2.png" id="6_e38ie"]
[ext_resource type="Texture2D" uid="uid://b0eqxxsyil13l" path="res://testArt/using/Slime/Individual Sprites/slime-attack-3.png" id="6_ejavq"]
[ext_resource type="Texture2D" uid="uid://dc8t133yfcq04" path="res://testArt/using/Slime/Individual Sprites/slime-idle-3.png" id="7_d8hhw"]
[ext_resource type="Texture2D" uid="uid://bkbc3py3oeipa" path="res://testArt/using/Slime/Individual Sprites/slime-attack-4.png" id="7_dtfkh"]
[ext_resource type="Texture2D" uid="uid://cvitcxf4jo83u" path="res://testArt/using/Slime/Individual Sprites/slime-die-0.png" id="8_b4vvh"]
[ext_resource type="Texture2D" uid="uid://cyv81j6jevddj" path="res://testArt/using/Slime/Individual Sprites/slime-hurt-0.png" id="8_f81pn"]
[ext_resource type="Texture2D" uid="uid://cxw0qia6mqg3k" path="res://testArt/using/Slime/Individual Sprites/slime-hurt-1.png" id="9_blanv"]
[ext_resource type="Texture2D" uid="uid://b3r8g0autu3kp" path="res://testArt/using/Slime/Individual Sprites/slime-die-1.png" id="9_su485"]
[ext_resource type="Texture2D" uid="uid://ba5hxav5qivr6" path="res://testArt/using/Slime/Individual Sprites/slime-hurt-2.png" id="10_1aw0l"]
[ext_resource type="Texture2D" uid="uid://bniwpmp3q1308" path="res://testArt/using/Slime/Individual Sprites/slime-die-2.png" id="10_3mhva"]
[ext_resource type="Texture2D" uid="uid://85hj0me6jwm6" path="res://testArt/using/Slime/Individual Sprites/slime-die-3.png" id="11_udjlp"]
[ext_resource type="Texture2D" uid="uid://tyu7fqlhxu6v" path="res://testArt/using/Slime/Individual Sprites/slime-hurt-3.png" id="11_vidy2"]
[ext_resource type="Texture2D" uid="uid://bcl308eswrieb" path="res://testArt/using/Slime/Individual Sprites/slime-move-0.png" id="12_mf8br"]
[ext_resource type="Texture2D" uid="uid://brh7uktecr4qn" path="res://testArt/using/Slime/Individual Sprites/slime-move-1.png" id="13_baspm"]
[ext_resource type="Texture2D" uid="uid://cqpetsr1ad5vp" path="res://testArt/using/Slime/Individual Sprites/slime-move-2.png" id="14_o3s0e"]
[ext_resource type="Texture2D" uid="uid://bfg2soga8w8xj" path="res://testArt/using/Slime/Individual Sprites/slime-move-3.png" id="15_wqeet"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a2gma"]
atlas = ExtResource("2_uoqc2")
region = Rect2(7, 3, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_w17u8"]
atlas = ExtResource("2_uoqc2")
region = Rect2(8, 3, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbhbh"]
atlas = ExtResource("2_uoqc2")
region = Rect2(9, 3, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ech1"]
atlas = ExtResource("2_uoqc2")
region = Rect2(10, 3, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3pr0"]
atlas = ExtResource("2_uoqc2")
region = Rect2(11, 3, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkj12"]
atlas = ExtResource("2_uoqc2")
region = Rect2(12, 3, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd8nc"]
atlas = ExtResource("2_uoqc2")
region = Rect2(13, 3, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxyx5"]
atlas = ExtResource("2_uoqc2")
region = Rect2(14, 3, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccfmf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2gma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w17u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbhbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ech1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3pr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkj12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd8nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxyx5")
}, {
"duration": 1.0,
"texture": ExtResource("3_u66km")
}, {
"duration": 1.0,
"texture": ExtResource("4_r3ok6")
}, {
"duration": 1.0,
"texture": ExtResource("5_253wm")
}, {
"duration": 1.0,
"texture": ExtResource("6_ejavq")
}, {
"duration": 1.0,
"texture": ExtResource("7_dtfkh")
}],
"loop": false,
"name": &"attacking",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_b4vvh")
}, {
"duration": 1.0,
"texture": ExtResource("9_su485")
}, {
"duration": 1.0,
"texture": ExtResource("10_3mhva")
}, {
"duration": 1.0,
"texture": ExtResource("11_udjlp")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xvn54")
}, {
"duration": 1.0,
"texture": ExtResource("5_8vmmh")
}, {
"duration": 1.0,
"texture": ExtResource("6_e38ie")
}, {
"duration": 1.0,
"texture": ExtResource("7_d8hhw")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 6.0,
"texture": ExtResource("8_f81pn")
}, {
"duration": 6.0,
"texture": ExtResource("9_blanv")
}, {
"duration": 6.0,
"texture": ExtResource("10_1aw0l")
}, {
"duration": 6.0,
"texture": ExtResource("11_vidy2")
}],
"loop": false,
"name": &"knockback",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_mf8br")
}, {
"duration": 1.0,
"texture": ExtResource("13_baspm")
}, {
"duration": 1.0,
"texture": ExtResource("14_o3s0e")
}, {
"duration": 1.0,
"texture": ExtResource("15_wqeet")
}],
"loop": true,
"name": &"walking",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_4qj6x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:up_direction")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1)]
}

[sub_resource type="Animation" id="Animation_02guc"]
resource_name = "attack_2"
length = 0.833337
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attacking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.416667, 0.533333, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../hitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.416667, 0.75, 0.816667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.416667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"faceTarget"
}, {
"args": [300, 1],
"method": &"animVeloc"
}]
}

[sub_resource type="Animation" id="Animation_qblkf"]
resource_name = "death"
length = 0.433335
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(0.90125, 43.7133),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dwm2c"]
resource_name = "interrupt"
length = 0.0833352
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:up_direction")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6hg5d"]
_data = {
"RESET": SubResource("Animation_4qj6x"),
"attack_2": SubResource("Animation_02guc"),
"death": SubResource("Animation_qblkf"),
"interrupt": SubResource("Animation_dwm2c")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nxdy8"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nl32o"]
height = 20.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 18
collision_mask = 19
collision_priority = 10.0
safe_margin = 1.0
script = ExtResource("1_utblw")

[node name="sprite" type="AnimatedSprite2D" parent="." groups=["enemy"]]
sprite_frames = SubResource("SpriteFrames_ccfmf")
animation = &"idle"
autoplay = "idle"

[node name="anims" type="AnimationPlayer" parent="sprite"]
libraries = {
"": SubResource("AnimationLibrary_6hg5d")
}

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nxdy8")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(8, -8)
collision_layer = 4
collision_mask = 4
monitoring = false

[node name="boxShape" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-22, 10)
shape = SubResource("CapsuleShape2D_nl32o")

[node name="hp_back_back" parent="." instance=ExtResource("4_6fdp5")]

[node name="ground_checker" type="RayCast2D" parent="."]
position = Vector2(-19, 12)
target_position = Vector2(0, 6)
hit_from_inside = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
